--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
   <h1>
     I am a widget test page!
   </h1>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script>
+  <!-- End of HubSpot Embed Code -->
+  <script type="text/javascript">
+    function onConversationsAPIReady() {
+      console.log(`HubSpot Conversations API: ${window.HubSpotConversations}`);
+    }
+
+    /*
+     If external API methods are already available, use them.
+    */
+    if (window.HubSpotConversations) {
+      console.log('dsfjkbndskjfb')
+      onConversationsAPIReady();
+    } else {
+      conosle.log('otriytiotrjy')
+      /*
+        Otherwise, callbacks can be added to the hsConversationsOnReady on the window object.
+        These callbacks will be called once the external API has been initialized.
+      */
+      window.hsConversationsOnReady = [onConversationsAPIReady];
+    }
+  </script>
 </body>
 
 </html>
