--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       console.log('dsfjkbndskjfb')
       onConversationsAPIReady();
     } else {
-      conosle.log('otriytiotrjy')
+      console.log('otriytiotrjy')
       /*
         Otherwise, callbacks can be added to the hsConversationsOnReady on the window object.
         These callbacks will be called once the external API has been initialized.
