restore to embed only

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>
     I am a widget test page!
   </h1>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     function onConversationsAPIReady() {
       console.log(`HubSpot Conversations API: ${window.HubSpotConversations}`);
 
@@ -43,7 +43,7 @@
       */
       window.hsConversationsOnReady = [onConversationsAPIReady];
     }
-  </script>
+  </script> -->
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script>
   <!-- End of HubSpot Embed Code -->
