comment out embed

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <h1>
     I am a widget test page!
   </h1>
-  <div id="upper-left" style="height:500px; width:500px;">
+  <!-- <div id="upper-left" style="height:500px; width:500px;">
     content
-  </div>
-  <script type="text/javascript">
+  </div> -->
+  <!-- <script type="text/javascript">
     function onConversationsAPIReady() {
       console.log(`HubSpot Conversations API: ${window.HubSpotConversations}`);
       window.hsConversationsSettings = {
@@ -42,7 +42,7 @@
       */
       window.hsConversationsOnReady = [onConversationsAPIReady];
     }
-  </script>
+  </script> -->
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script>
   <!-- End of HubSpot Embed Code -->
