--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
-  <h1>
+  <!-- <h1>
     I am a widget test page!
-  </h1>
+  </h1> -->
+
+  <h3>This is a website with an embedded 360</h3>
+  <iframe height="350px" width="75%" allowfullscreen="true"
+    src="https://momento360.com/e/u/a9b53aa8f8b0403ba7a4e18243aabc66"></iframe>
+
   <!-- <div id="upper-left" style="height:1500px; width:800px;">
     content
   </div> -->
