revert back to previous

--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 </head>
 
 <body>
-  <!-- <h1>
+  <h1>
     I am a widget test page!
-  </h1> -->
-
-  <h3>This is a website with an embedded 360</h3>
-  <iframe height="350px" width="75%" allowfullscreen="true"
-    src="https://momento360.com/e/u/a9b53aa8f8b0403ba7a4e18243aabc66"></iframe>
-
+  </h1>
   <!-- <div id="upper-left" style="height:1500px; width:800px;">
     content
   </div> -->
@@ -49,7 +44,7 @@
     }
   </script> -->
   <!-- Start of HubSpot Embed Code -->
-  <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script> -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script>
   <!-- End of HubSpot Embed Code -->
 </body>
 
