--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <!-- <div id="upper-left" style="height:1500px; width:800px;">
     content
   </div> -->
-  <!-- <script type="text/javascript">
+  <script type="text/javascript">
     function onConversationsAPIReady() {
       console.log(`HubSpot Conversations API: ${window.HubSpotConversations}`);
       window.hsConversationsSettings = {
-        loadImmediately: false,
-        inlineEmbedSelector: "#upper-left"
+        // loadImmediately: false,
+        // inlineEmbedSelector: "#upper-left"
+        enableWidgetCookieBanner: true,
       };
       window.addEventListener('beforeunload', function (e) {
         if (window.HubSpotConversations) {
@@ -42,7 +43,7 @@
       */
       window.hsConversationsOnReady = [onConversationsAPIReady];
     }
-  </script> -->
+  </script>
   <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scriptsqa.com/99715584.js"></script>
   <!-- End of HubSpot Embed Code -->
